# Manager-Database

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .project_modules.txt  Agents.md  CHANGELOG.md  Makefile  Manager-Intel-Platform  Manager-Intel-Platform.md  README.md  README_bootstrap.md  alembic.ini  autofix_report_enriched.json  codex-analysis-135.json  codex-analysis-136.json  codex-prompt-234.md  codex-prompt-235.md  codex-prompt-342.md  codex-prompt-345.md  codex-prompt-347.md  codex-prompt-350.md  codex-prompt-354.md  codex-prompt-385.md  codex-prompt-392.md  codex-prompt-398.md  codex-prompt-400.md  codex-prompt-403.md  codex-prompt-432.md  codex-prompt-438.md  codex-prompt-440.md  codex-prompt-443.md  codex-prompt-445.md  codex-prompt-448.md  codex-prompt-450.md  codex-prompt-452.md  codex-prompt-454.md  codex-prompt-455.md  (+29 more)
.agents/: issue-1014-ledger.yml  issue-1215-ledger.yml  issue-1236-ledger.yml  issue-129-ledger.yml  issue-132-ledger.yml  issue-133-ledger.yml  issue-194-ledger.yml  issue-245-ledger.yml  issue-247-ledger.yml  issue-248-ledger.yml  issue-259-ledger.yml  issue-263-ledger.yml  issue-384-ledger.yml  issue-388-ledger.yml  issue-390-ledger.yml  issue-394-ledger.yml  issue-397-ledger.yml  issue-399-ledger.yml  issue-429-ledger.yml  issue-433-ledger.yml  issue-437-ledger.yml  issue-439-ledger.yml  issue-444-ledger.yml  issue-447-ledger.yml  issue-449-ledger.yml  issue-451-ledger.yml  issue-453-ledger.yml  issue-456-ledger.yml  issue-458-ledger.yml  issue-462-ledger.yml  issue-464-ledger.yml  issue-466-ledger.yml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: daily_tasks.md
.github/scripts/: github-rate-limited-wrapper.js  maint-post-ci.js  parse_chatgpt_topics.py
.github/workflows/: agents-72-codex-belt-worker-dispatch.yml  agents-81-gate-followups.yml  agents-auto-pilot.yml  agents-issue-intake.yml  agents-keepalive-loop-reporter.yml  agents-keepalive-loop.yml  agents-verifier.yml  agents-verify-to-new-pr.yml  agents-weekly-metrics.yml  autofix-versions.env  autofix.yml  ci.yml  database-snapshot.yml  maint-76-claude-code-review.yml  maint-coverage-guard.yml  nightly.yml  pr-00-gate.yml  schema-idempotence.yml  test-ci.yml  test-reusable.yml
adapters/: __init__.py  asic.py  base.py  canada.py  edgar.py  mas.py  news.py  uk.py
agents/: codex-1014.md  codex-1214.md  codex-1236.md  codex-1262.md  codex-1267.md  codex-1273.md  codex-1274.md  codex-1275.md  codex-1276.md  codex-1277.md  codex-1279.md  codex-1280.md  codex-1281.md  codex-1283.md  codex-1284.md  codex-1297.md  codex-1298.md  codex-1299.md  codex-1300.md  codex-1301.md  codex-1302.md  codex-1303.md  codex-1312.md  codex-1313.md  codex-1314.md  codex-1316.md  codex-204.md  codex-205.md  codex-238.md  codex-304.md  codex-346.md  codex-349.md  codex-352.md  codex-40.md  codex-41.md  codex-43.md  codex-64.md  codex-672.md  codex-673.md  codex-676.md  (+23 more)
alembic/: env.py
alembic/versions/: 001_canonical_schema.py  (+10 more)
alerts/: __init__.py  channels.py  db.py  dispatch.py  engine.py  formatter.py  integration.py  models.py
api/: Dockerfile  __init__.py  _compat.py  activism.py  alerts.py  cache.py  chat.py  data.py  handler.py  main.py  managers.py  memory_profiler.py  models.py  parser.py  search.py  signals.py
chains/: __init__.py  evidence.py  filing_summary.py  holdings_analysis.py  intent.py  nl_query.py  rag_search.py  utils.py
docs/: API.md  LABELS.md  LANGSMITH_SETUP.md  LLM_PROVIDER_CHAIN.md  README.md  api_changes.md  api_design_guidelines.md  api_rate_limiting.md  baseline-kit-dependency.md  memory_profiler.md  uk_pdf_format_notes.md
etl/: Dockerfile  activism_detection.py  activism_flow.py  conviction_flow.py  daily_diff_flow.py  digest_flow.py  edgar_flow.py  evaluation_flow.py  ingest_flow.py  logging_setup.py  news_flow.py  summariser_flow.py  uk_flow.py
llm/: __init__.py  client.py  cost_tracking.py  evaluation.py  injection.py  langsmith_fleet.py  provider.py  tracing.py
manager_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monitoring/: memory_usage.csv
scripts/: analyze_memory.py  board_sync.py  build_wasm_demo.py  capture_ui_screenshots.py  check_dialect_portability.py  collect_memory_24h.py  db_snapshot_restore.py  fetch_offline_runtime.py  monitor_memory.py  open_issues.py  prepare_memory_review.py  readiness_smoke.py  report_memory_24h.py  resolve_aliases.py  run_adapter_coverage.sh  run_memory_acceptance.py  sample_universe.json  seed_managers.py  seed_readiness_data.py  seed_universe.py  sync_milestones.py  sync_test_dependencies.py  validate_health_alerts.py  verify_memory_acceptance.py  verify_schema_idempotence.sh
tests/: _pg_fakes.py  conftest.py  profiler_test.py  route_helpers.py  test_activism_adapter.py  test_activism_api.py  test_activism_detection.py  test_activism_dialect_portability.py  test_adapter_base.py  test_adapter_registry.py  test_alert_channels.py  test_alert_engine.py  test_alert_integration.py  test_alert_postgres_integration.py  test_alerts_api.py  test_analyze_memory.py  test_apac_adapters.py  test_api_alert_dialect_portability.py  test_api_changes_doc.py  test_api_parser.py  test_app_health.py  test_artifacts.py  test_autofix_validation.py  test_board_sync.py  test_canada_adapter.py  test_capture_ui_screenshots.py  test_chain_dialect_portability.py  test_chain_postgres_integration.py  test_chain_utils.py  test_chat_api.py  test_chat_api_fleet_integration.py  test_chat_zone_disabled.py  test_ci_coverage_delta.py  test_collect_memory_24h.py  test_conviction_flow.py  test_cost_script_dialect_portability.py  test_coverage_guard.py  test_crowded_contrarian.py  test_daily_diff.py  test_daily_diff_deployment.py  (+101 more)
tools/: __init__.py  embedding_provider.py  langchain_client.py  registry.py  run_contract.py
ui/: Dockerfile  __init__.py  alerts.py  app.py  daily_report.py  dashboard.py  launch.py  research.py  search.py  upload.py
utils/: __init__.py  extract.py  identifiers.py  numeric.py  rate_limiter.py
web/: __init__.py  index.html  wasm_app.py
(+55 files in other folders)
